# rmalloc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rmalloc_test
include/rmalloc/: rmalloc.h
src/: rmalloc.cpp
test/: main.cpp
